# character-sim

./: .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  INSTALLATION_SETUP.md  QUICKSTART.md  README.md  USER_GUIDE.md  pyproject.toml  ruff.toml
src/character_creator/: __init__.py
src/character_creator/api/: __init__.py  main.py  models.py
src/character_creator/api/routes/: characters.py  evolution.py  interactions.py
src/character_creator/core/: __init__.py  character.py  constants.py  database.py  dialogue.py  emotional_state.py  heredity.py  interaction.py  memory.py  memory_tiered.py  personality.py  self_model.py  trait_evolution.py
src/character_creator/demos/: __init__.py  basic_interaction.py  live_dialogue.py  multi_character_scene.py
src/character_creator/llm/: __init__.py  metrics.py  prompts.py  providers.py
src/character_creator/ui/: app.py  dashboard.py
src/character_creator/utils/: config.py  logging.py  path.py  validators.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_character.py  test_dialogue.py  test_dissonance.py  test_emotional_state.py  test_heredity.py  test_integration_e2e.py  test_interaction.py  test_llm_integration.py  test_llm_providers.py  test_logging.py  test_memory_tiered.py  test_metrics.py  test_milestone_review.py  test_self_model.py  test_trait_evolution.py
