[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "character-creator"
version = "0.1.0"
description = "Interactive LLM-backed character creation and dialogue system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Character Creator Team", email = "team@charactercreator.dev" }]
keywords = ["llm", "characters", "dialogue", "interactive", "ai"]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "structlog>=23.2.0",
]

optional-dependencies.dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "isort>=5.13.0",
]

optional-dependencies.demo = [
    "ipython>=8.18.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
]

# NOTE: Ruff configuration lives in ruff.toml (single source of truth).
# Do NOT add [tool.ruff] sections here.

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "tenacity.*",
    "structlog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["src/character_creator"]
branch = true

[tool.bandit]
exclude_dirs = ["tests", "src/anthropological_simulation"]
skips = ["B104"]  # Binding to 0.0.0.0 is intentional for local dev

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\\s*@(abc\\.)?abstractmethod",
]
